ignite-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ignite-ingress
  namespace: ignite
  annotations :
    kubectl.kubernetes.io/last-applied-configuration : {\"apiVersion\":\"extensions/v1beta1\",\"kind\":\"Ingress\",\"metadata\":{\"annotations\":{},\"name\":\"traefik-web-ui\",\"namespace\":\"kube-system\"},\"spec\":{\"rules\":[{\"host\":\"traefik-ui.minikube\",\"http\":{\"paths\":[{\"backend\":{\"serviceName\":\"traefik-web-ui\",\"servicePort\":\"web\"},\"path\":\"/\"}]}}]}}\n
spec:
  rules:
    http:
      paths:
      - path: /
        backend:
          serviceName: ignite-demo
          servicePort: web
